# ai-playground

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  PERFORMANCE.md  README.md  assistant.py  beast_final.py  beast_unleashed.py  benchmark.py  cleanup_bloat.ps1  code_reviewer.py  demo.py  demo_edgemind.py  doc_gen.py  docker-compose.old.yml  docker-compose.yml  edge_accelerator.py  edge_optimizer.py  edgemind_demo.py  edgemind_kernels.py  edgemind_torch.py  entrypoint.sh  fast_speculative.py  git_helper.py  integrate_beast.py  integrated_edgemind.py  large_files.txt  performance_verification_results.json  project_map.py  project_structure.txt  pytorch_integration.py  quick_test.py  requirements-autonomous.txt  requirements-docker.txt  requirements-kernels.txt  requirements.txt  (+25 more)
.github/workflows/: cpu-int4.yml  int4.yml  project-automation.yml  windows-int4.yml
api/: main.py
data/logs/: conversation_20250809_115453.json
data/research_reports/: enhanced_research_AI_startup_funding_trends_2025_20250809_131506.json  enhanced_research_E-commerce_automation_trends_2_20250809_131615.json  enhanced_research_Healthcare_AI_market_analysis_20250809_131638.json  enhanced_research_Remote_work_technology_market__20250809_131529.json  enhanced_research_Sustainable_technology_busines_20250809_131553.json  enhanced_research_artificial_intelligence_market_20250809_130744.json  enhanced_research_best_selling_book_trends_in_20_20250809_130138.json  research_report_20250809_123454.json
scripts/: fetch_third_party.ps1
src/: edgeformer_integration.py
src/agents/: analyst.py  autonomous_agent.py  autonomous_research_system.py  browser_security.py  coder.py  extraction_fix.py  extraction_playwright.py  improved_research_agent.py  minimal_research_agent.py  research_specialist.py  safe_computer_control.py  simple_test.py  writer.py
src/api/: main.py
src/compute/: hybrid_compute_manager.py
src/core/: api_debugger.py  chain_of_thought_engine.py  debug_api.py  edgemind.py  fine_tuner.py  gguf_loader.py  local_llm_engine.py  local_llm_engine_fixed.py  mini_inference.py  multi_api_manager.py  openai_starter.py  smart_rag.py  streaming_demo.py  weekend_starter.py  working_ai_playground.py
src/kernels/cpu/int4/: B_gen.py  CMakeLists.txt  PERFORMANCE_REPORT.md  benchmark_suite.ps1  build_simple.ps1  build_ultra_simple.bat  build_windows.bat  build_windows_bindings.ps1  check_kernels.bat  check_optimizations.bat  direct_kernel_test.bat  edgemind_kernels.py  emergency_build.ps1  emergency_performance_fix.bat  generate_report.ps1  model_interface.cpp  model_interface.h  pack_int4.cpp  pack_int4.h  pack_loader.cpp  pack_loader.h  pack_q8.cpp  pack_q8.h  parallel_for.h  performance_report_20250810_180101.csv  plot_performance.py  python_bindings.cpp  qgemm_int4.cpp  qgemm_int4.h  realistic_performance.py  rebuild_optimized.bat  run_performance_report.ps1  simple_bindings.cpp  test_real_kernels.py  test_ultra_simple.py  ultra_simple_bindings.cpp  working_bindings.cpp
src/kernels/cpu/int4/dml/int4/: CMakeLists.txt  README.md  qgemm_q8_real.cpp
src/kernels/cpu/int4/dml/tests/: test_qgemm.cpp
src/kernels/cpu/int4/tests/: test_correctness.cpp  test_debug.cpp  test_gemm.cpp  test_perf.cpp  test_perf_bias.cpp  test_perf_load_packed.cpp  test_perf_mt.cpp  test_perf_q8_mt.cpp  test_perf_tiled_mt.cpp  test_perf_vs_baseline.cpp  test_q8_pack.cpp  test_qgemm.cpp
src/kernels/cpu/int4/tools/quant/: requirements.txt
src/models/: bitnet.py  gpt_oss_integration.py
src/optimization/: showcase_edgeformer.py
src/optimization/utils/: amd_optimizations.py  benchmark.py  checkpoint_fix.py  config.py  data_augmentation.py  device.py  device_optimization.py  error_handling.py  fixed_kv_cache_manager.py  htps_adaptive_policy.py  htps_budget_manager.py  improved_value_estimator.py  kv_cache.py  kv_cache_manager.py  kv_cache_offload.py  kv_cache_offloader.py  logging.py  long_sequence.py  memory_tracking.py  model_analyzer.py  model_loading.py  model_optimizer.py  model_trainer.py  online_training.py  quantization.py  quantization_adapter.py  rdna3_optimizations.py  text_dataset.py  tokenizer.py  tokenizer_utils.py  training.py  training_utils.py  value_estimator.py  weight_quantization.py
src/swarm/: peer_discovery.py
src/tools/: voice_assistant.py  web_search.py
tests/: hybrid_edgemind.py
tools/quant/: check_error.py  quantize_q4_edge.py  quantize_q8_edge.py
web/: agent_control_app.py  streamlit_app.py  streamlit_app_v2.py
web/.streamlit/: config.toml
